# mlops-course

./: MLproject  main.py  pyproject.toml
